--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "devDependencies": {
-        "eslint-config-custom": "*",
         "prettier": "^3",
         "turbo": "^1"
     },
@@ -20,5 +19,5 @@
         "node": ">=14.0.0"
     },
     "dependencies": {},
-    "packageManager": "yarn@1.22.19"
+    "packageManager": "pnpm@8.15.6"
 }
