--- a/packages/wagmi/package.json
+++ b/packages/wagmi/package.json
@@ -12,12 +12,12 @@
         "prepack": "run-s build"
     },
     "dependencies": {
-        "@cartesi/util": "6.1.0"
+        "@cartesi/util": "workspace:*"
     },
     "devDependencies": {
         "@wagmi/cli": "^1.3",
         "npm-run-all": "^4",
-        "tsconfig": "*",
+        "tsconfig": "workspace:*",
         "typechain": "^8",
         "typescript": "^5"
     }
