--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -7,7 +7,8 @@
         "strict": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "skipLibCheck": true
     },
     "exclude": ["dist", "node_modules"]
 }
