--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -99,6 +99,7 @@
         "@types/keccak": "^3",
         "@types/mocha": "^10",
         "@types/node": "^20",
+        "@usecannon/cli": "^2.21.3",
         "chai": "^4",
         "copyfiles": "^2",
         "decimal.js": "^10",
